fix: responsive on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ section .fp-overflow {
 main {
 	display: grid !important;
 	grid-template: repeat(2, 1fr) / 1fr;
-	grid-gap: 10px 0;
 	height: 90%;
 	:first-child {
 		grid-area: 2 / 1;
@@ -86,7 +85,7 @@ main {
 		display: grid !important;
 		grid-template: repeat(2, 1fr) / 1fr;
 		grid-gap: 10px 0;
-		height: 90%;
+		height: 100%;
 		:first-child {
 			grid-area: 2 / 1;
 		}
