--- a/src/sections/skills/skills.css
+++ b/src/sections/skills/skills.css
@@ -16,7 +16,7 @@
 	h1 {
 		font-size: 3rem;
 
-		@media (min-width: 380px) {
+		@media (min-width: 430px) {
 			font-size: 4rem;
 		}
 
@@ -53,7 +53,7 @@
 
 		div {
 			text-align: center;
-			margin: 0 0 30px 0;
+			margin: 0 0 20px 0;
 			font-size: 16px;
 			width: 25%;
 			display: grid;
@@ -69,10 +69,8 @@
 			}
 
 			p {
-				margin: 0;
-				margin-top: 1rem;
 				@media (min-width: 430px) {
-					margin: 0 0 0 10px;
+					margin-bottom: 10px;
 				}
 				@media (min-width: 768px) {
 					margin: 0;
